--- a/About.html
+++ b/About.html
@@ -43,13 +43,13 @@
     <div class="box">
       
       <div class="title">
-        <center><h3> ABOUT ME</h3></center>
+        <h3><strong> ABOUT ME</strong></h3>
         <img src="images/mina.jpg" alt="picture of me" width="85%">
         </div>
         <div class="content">
           <div>
             <center><h4> Khomotso Prudence Mkansi </h4></center>
-            <p class="stuff"> Offering creative design solutions to solve business problems is what I do best.
+            <p> Offering creative design solutions to solve business problems is what I do best.
                 I write in HTML, CSS and JavaScript.<br> I like working on scalability, performance, reusability, and great user experiences.<br><br>
                 
                 I don't only write code but I use human centered design to make it appealling and enjoyable for the user.</p> 
