--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
          <br><i class="fas fa-phone">  071 931 1416</i><br><br> 
  
         
-         <i class="far fa-envelope">  khomotso.mkansi@umuzi.org</i><br><br><br> 
+         <i class="far fa-envelope">  kgomotsomkansi@gmail.com</i><br><br><br> 
   
        
          <a href="https://www.linkedin.com/in/khomotso-prudence-mkansi-aa7794b7/" class="linkedin"><i class="fab fa-linkedin" style="font-size:36px"></i></a>
