--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
       
       <div class="title">
         <h3><strong> ABOUT ME</strong></h3>
-        <img src="images/0.jpeg" alt="picture of me" width="85%">
+        <img src="images/KNP.jpg" alt="picture of me" width="85%">
         </div>
         <div class="content">
           <div>
