--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </header>
 
     <center><div class="fullCard" id="thumbnail">
-            <img src="images/me1.jpg">
+            <img src="images/me_black.jpeg">
             <div class="cardContent">
               <div class="cardText">
                 <h1>Avuxeni</h1>
